welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: type mismatch;
 found   : Int
 required: Boolean
  if( (Math.abs(91) <= n < Math.abs(100)) || (Math.abs(191) <= n < Math.abs(200)) ){
                                   ^nearHundred:2: error: type mismatch;
 found   : Int
 required: Boolean
  if( (Math.abs(91) <= n < Math.abs(100)) || (Math.abs(191) <= n < Math.abs(200)) ){
                                                                           ^